--- a/app/src/main/res/layout/row_tools.xml
+++ b/app/src/main/res/layout/row_tools.xml
@@ -7,7 +7,8 @@
     android:layout_margin="7sp"
     app:cardCornerRadius="5sp"
     tools:ignore="RtlHardcoded"
-    android:id="@+id/card_view">
+    android:id="@+id/card_view"
+    app:cardBackgroundColor="@color/colorPrimaryLightTxMore">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,7 +18,6 @@
         android:paddingBottom="5sp"
         android:paddingRight="20sp"
         android:orientation="horizontal"
-        android:background="@drawable/card_dashboard_bg"
         android:id="@+id/parent_card">
 
         <FrameLayout
@@ -39,7 +39,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/baseline_verified_user_black_48"
+                android:src="@drawable/baseline_rotate_right_black_48"
                 android:padding="10sp"
                 android:tint="@color/colorMajorDarkMuchLighter"
                 tools:ignore="ContentDescription"
@@ -60,35 +60,22 @@
                 android:layout_marginBottom="3sp"
                 android:layout_marginLeft="15sp"
                 android:layout_marginRight="5sp"
-                android:textColor="@color/white"
+                android:textColor="@color/colorMajorDarkMuchLighter"
                 android:textSize="20sp"
-                android:text="DIAGNOSTIC"
+                android:text="Rotation Vector"
                 android:id="@+id/name"
                 tools:ignore="RtlHardcoded" />
 
-            <android.support.v7.widget.CardView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:elevation="0sp"
+                android:textColor="@color/colorMajorDarkMuchLighter"
+                android:textSize="12sp"
                 android:layout_marginBottom="5sp"
                 android:layout_marginLeft="15sp"
                 android:layout_marginRight="5sp"
-                app:cardCornerRadius="10sp"
-                app:cardBackgroundColor="@color/white">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorMajorDarkMuchLighter"
-                    android:textSize="12sp"
-                    android:paddingTop="3sp"
-                    android:paddingBottom="3sp"
-                    android:paddingLeft="8sp"
-                    android:paddingRight="8sp"
-                    android:text="26 Items"
-                    android:id="@+id/count_description"/>
-
-            </android.support.v7.widget.CardView>
+                android:text="26 Items"
+                android:id="@+id/count_description"/>
 
         </LinearLayout>
 
