--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -51,7 +51,8 @@
             app:piv_interactiveAnimation="true"
             app:piv_selectedColor="#13A2F5"
             app:piv_unselectedColor="@color/colorTextThree"
-            app:piv_viewPager="@id/viewPager"/>
+            app:piv_viewPager="@id/viewPager"
+            app:piv_radius="5sp"/>
 
     </LinearLayout>
 
