--- a/app/src/main/res/layout/row_popular_tests.xml
+++ b/app/src/main/res/layout/row_popular_tests.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="7sp"
-    app:cardCornerRadius="5sp"
+    app:cardCornerRadius="20sp"
     tools:ignore="RtlHardcoded"
     android:id="@+id/card_view">
 
@@ -17,7 +17,8 @@
         android:paddingBottom="5sp"
         android:paddingRight="20sp"
         android:orientation="horizontal"
-        android:id="@+id/parent_card">
+        android:id="@+id/parent_card"
+        android:background="@drawable/oval_dashboard_bg">
 
         <FrameLayout
             android:layout_width="65sp"
