--- a/app/src/main/res/layout/row_popular_tests.xml
+++ b/app/src/main/res/layout/row_popular_tests.xml
@@ -4,8 +4,11 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="7sp"
-    app:cardCornerRadius="20sp"
+    android:layout_marginLeft="10sp"
+    android:layout_marginTop="10sp"
+    android:layout_marginBottom="15sp"
+    app:cardElevation="3sp"
+    app:cardCornerRadius="10sp"
     tools:ignore="RtlHardcoded"
     android:id="@+id/card_view">
 
@@ -18,36 +21,18 @@
         android:paddingRight="20sp"
         android:orientation="horizontal"
         android:id="@+id/parent_card"
-        android:background="@drawable/oval_dashboard_bg">
+        android:background="@drawable/oval_tests_bg">
 
-        <FrameLayout
+        <ImageView
             android:layout_width="65sp"
             android:layout_height="65sp"
             android:layout_gravity="center_vertical"
             android:layout_margin="5sp"
-            android:padding="5sp">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="26sp"
-                app:cardElevation="0sp"
-                app:cardBackgroundColor="@color/white">
-
-            </android.support.v7.widget.CardView>
-
-            <ImageView
-                android:layout_width="65sp"
-                android:layout_height="65sp"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="5sp"
-                android:padding="15sp"
-                android:src="@drawable/baseline_rotate_right_black_48"
-                android:tint="@color/colorMajorDarkMuchLighter"
-                tools:ignore="ContentDescription"
-                android:id="@+id/image"/>
-
-        </FrameLayout>
+            android:padding="15sp"
+            android:src="@drawable/baseline_rotate_right_black_48"
+            android:tint="@color/white"
+            tools:ignore="ContentDescription"
+            android:id="@+id/image"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +47,7 @@
                 android:layout_marginBottom="3sp"
                 android:layout_marginLeft="15sp"
                 android:layout_marginRight="5sp"
-                android:textColor="@color/colorMajorDarkMuchLighter"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 tools:text="Rotation Vector"
                 android:id="@+id/name"
