--- a/app/src/main/res/layout/row_tools.xml
+++ b/app/src/main/res/layout/row_tools.xml
@@ -6,8 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="10sp"
     android:layout_marginTop="10sp"
-    android:layout_marginBottom="10sp"
+    android:layout_marginBottom="15sp"
     app:cardCornerRadius="10sp"
+    app:cardElevation="3sp"
     tools:ignore="RtlHardcoded"
     android:id="@+id/card_view">
 
