--- a/app/src/main/res/layout/row_tools.xml
+++ b/app/src/main/res/layout/row_tools.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="10sp"
+    android:layout_marginLeft="5sp"
+    android:layout_marginRight="5sp"
     android:layout_marginTop="10sp"
     android:layout_marginBottom="15sp"
     app:cardCornerRadius="10sp"
