--- a/app/src/main/res/layout/row_tools.xml
+++ b/app/src/main/res/layout/row_tools.xml
@@ -28,7 +28,8 @@
             android:layout_width="65sp"
             android:layout_height="65sp"
             android:layout_gravity="center_vertical"
-            android:layout_margin="5sp"
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
             android:padding="15sp"
             android:src="@drawable/baseline_rotate_right_black_48"
             android:tint="@color/white"
@@ -46,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
                 android:layout_marginBottom="3sp"
-                android:layout_marginLeft="15sp"
+                android:layout_marginLeft="5sp"
                 android:layout_marginRight="5sp"
                 android:textColor="@color/white"
                 android:textSize="20sp"
