--- a/app/src/main/res/layout/row_image_tools.xml
+++ b/app/src/main/res/layout/row_image_tools.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="5sp"
     android:layout_marginRight="5sp"
     android:layout_marginTop="10sp"
-    android:layout_marginBottom="15sp"
-    app:cardCornerRadius="10sp"
+    android:layout_marginBottom="5sp"
     app:cardElevation="3sp"
+    app:cardCornerRadius="10sp"
     tools:ignore="RtlHardcoded"
     android:id="@+id/card_view">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="5sp"
         android:paddingTop="5sp"
         android:paddingBottom="5sp"
@@ -25,12 +25,12 @@
         android:background="@drawable/card_dashboard_bg">
 
         <ImageView
-            android:layout_width="65sp"
-            android:layout_height="65sp"
+            android:layout_width="55sp"
+            android:layout_height="55sp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5sp"
             android:layout_marginRight="5sp"
-            android:padding="15sp"
+            android:padding="10sp"
             android:src="@drawable/baseline_rotate_right_black_48"
             android:tint="@color/white"
             tools:ignore="ContentDescription"
@@ -50,7 +50,7 @@
                 android:layout_marginLeft="5sp"
                 android:layout_marginRight="5sp"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 tools:text="Rotation Vector"
                 android:id="@+id/name"
                 tools:ignore="RtlHardcoded" />
