--- a/app/src/main/res/drawable/oval_tools_bg.xml
+++ b/app/src/main/res/drawable/oval_tools_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient android:startColor="#73ce90"
-        android:centerColor="#73ce90"
-        android:endColor="#73ce90"
+    <gradient android:startColor="@color/primary_new_gradient"
+        android:centerColor="#5a57ff"
+        android:endColor="#6a79fc"
         android:angle="45"/>
     <!--64c182-->
     <!--99d479-->
