--- a/app/src/main/res/layout/row_popular_tests.xml
+++ b/app/src/main/res/layout/row_popular_tests.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="5sp"
@@ -15,20 +15,21 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="5sp"
         android:paddingTop="5sp"
         android:paddingBottom="5sp"
         android:paddingRight="20sp"
         android:orientation="horizontal"
         android:id="@+id/parent_card"
-        android:background="@drawable/oval_tests_bg">
+        android:background="@drawable/oval_tools_bg">
 
         <ImageView
             android:layout_width="65sp"
             android:layout_height="65sp"
             android:layout_gravity="center_vertical"
-            android:layout_margin="5sp"
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
             android:padding="15sp"
             android:src="@drawable/baseline_rotate_right_black_48"
             android:tint="@color/white"
@@ -46,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
                 android:layout_marginBottom="3sp"
-                android:layout_marginLeft="15sp"
+                android:layout_marginLeft="5sp"
                 android:layout_marginRight="5sp"
                 android:textColor="@color/white"
                 android:textSize="20sp"
