--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -56,24 +56,38 @@
 
         </FrameLayout>
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@drawable/line_bg"
+            tools:ignore="ContentDescription,SmallSp" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50sp"
+            android:layout_height="55sp"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="0sp"
-                android:layout_height="30sp"
+                android:layout_height="match_parent"
+                android:padding="15sp"
                 android:layout_gravity="center_vertical"
                 android:tint="@color/colorTextFour"
-                android:src="@drawable/baseline_toys_black_48"
+                android:src="@drawable/round_build_black_48"
                 android:layout_weight="1"
                 android:id="@+id/tools"
                 tools:ignore="ContentDescription" />
 
             <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription,SmallSp" />
+
+            <ImageView
                 android:layout_width="0sp"
-                android:layout_height="30sp"
+                android:layout_height="match_parent"
+                android:padding="15sp"
                 android:layout_gravity="center_vertical"
                 android:tint="@color/colorTextFour"
                 android:src="@drawable/baseline_whatshot_black_48"
@@ -82,14 +96,22 @@
                 tools:ignore="ContentDescription" />
 
             <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription,SmallSp" />
+
+            <ImageView
                 android:layout_width="0sp"
-                android:layout_height="30sp"
+                android:layout_height="match_parent"
+                android:padding="15sp"
                 android:tint="@color/colorTextFour"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/baseline_person_black_48"
                 android:layout_weight="1"
                 android:id="@+id/profile"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
