--- a/app/src/main/res/layout/fragment_sound_level.xml
+++ b/app/src/main/res/layout/fragment_sound_level.xml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".view.tool_activity.everyday_tools.sound_level.SoundLevelFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.github.anastr.speedviewlib.PointerSpeedometer
+        android:id="@+id/pointer_speedometer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:layout_margin="50sp"
+        android:layout_gravity="center_horizontal"
+        app:sv_unitTextSize="0sp"
+        app:sv_withTremble="false"/>
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/sound_level"
+            android:paddingBottom="10sp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorMajor"/>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardElevation="10sp"
+            app:cardCornerRadius="3sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="30sp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textSize="35sp"
+                android:padding="20sp"
+                android:textColor="@color/colorMajor"
+                android:id="@+id/percent_sound"
+                tools:ignore="HardcodedText" />
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</LinearLayout>
