--- a/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
@@ -1,43 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:paddingTop="10sp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinator">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10sp"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:gravity="center"
-        tools:text="TEXT SCAN RESULTS"
-        android:id="@+id/header_text"
-        android:background="@color/red_shade_four"/>
-
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:indeterminate="true"
-        android:id="@+id/progress_bar"/>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="400sp"
-        android:scrollbars="vertical"
-        android:scrollbarFadeDuration="5000">
+        android:layout_height="match_parent"
+        android:paddingBottom="40sp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:textSize="16sp"
-            android:padding="10sp"
-            android:textColor="@color/red_shade_four"
-            android:id="@+id/results"/>
+            android:textSize="20sp"
+            android:textColor="@color/primary_new"
+            android:text="@string/set_new_timer"
+            android:gravity="center_horizontal"
+            android:padding="5sp"/>
 
-    </ScrollView>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/primary_new"
+            tools:ignore="ContentDescription,SmallSp" />
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10sp">
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorTextOne"
+                android:text="HOURS"
+                android:textSize="18sp"
+                android:padding="5sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText"/>
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorTextOne"
+                android:text="MINUTES"
+                android:textSize="18sp"
+                android:padding="5sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorTextOne"
+                android:text="SECONDS"
+                android:textSize="18sp"
+                android:padding="5sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10sp">
+
+            <EditText
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/primary_new"
+                android:hint="01"
+                android:inputType="number"
+                android:textColorHint="@color/primary_new_light_light_light"
+                android:textSize="40sp"
+                android:padding="10sp"
+                android:backgroundTint="@color/primary_new"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText"
+                android:id="@+id/hours_text"/>
+
+            <EditText
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/primary_new"
+                android:hint="01"
+                android:inputType="number"
+                android:textColorHint="@color/primary_new_light_light_light"
+                android:textSize="40sp"
+                android:padding="10sp"
+                android:backgroundTint="@color/primary_new"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText"
+                android:id="@+id/minutes_text"/>
+
+            <EditText
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/primary_new"
+                android:hint="01"
+                android:inputType="number"
+                android:textColorHint="@color/primary_new_light_light_light"
+                android:textSize="40sp"
+                android:padding="10sp"
+                android:backgroundTint="@color/primary_new"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText"
+                android:id="@+id/seconds_text"/>
+
+        </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="10sp"
+            app:cardCornerRadius="20sp"
+            android:layout_gravity="center_horizontal"
+            app:cardBackgroundColor="@color/red_shade_four">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="SUBMIT TIMER"
+                android:textSize="18sp"
+                android:paddingLeft="40sp"
+                android:paddingRight="40sp"
+                android:paddingBottom="10sp"
+                android:paddingTop="10sp"
+                android:gravity="center_horizontal"
+                tools:ignore="HardcodedText"
+                android:id="@+id/submit_timer"/>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
