--- a/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_dialog.xml
@@ -30,6 +30,20 @@
             android:background="@color/primary_new"
             tools:ignore="ContentDescription,SmallSp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:background="@color/green_shade_three_tx"
+            android:text="HOURS SHOULD NOT BE MORE THAN 24"
+            android:gravity="center_horizontal"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+            android:visibility="invisible"
+            android:id="@+id/warning"
+            tools:ignore="HardcodedText" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -90,7 +104,8 @@
                 android:backgroundTint="@color/primary_new"
                 android:gravity="center_horizontal"
                 tools:ignore="HardcodedText"
-                android:id="@+id/hours_text"/>
+                android:id="@+id/hours_text"
+                android:maxLength="2"/>
 
             <EditText
                 android:layout_width="0sp"
@@ -105,7 +120,8 @@
                 android:backgroundTint="@color/primary_new"
                 android:gravity="center_horizontal"
                 tools:ignore="HardcodedText"
-                android:id="@+id/minutes_text"/>
+                android:id="@+id/minutes_text"
+                android:maxLength="2"/>
 
             <EditText
                 android:layout_width="0sp"
@@ -120,7 +136,8 @@
                 android:backgroundTint="@color/primary_new"
                 android:gravity="center_horizontal"
                 tools:ignore="HardcodedText"
-                android:id="@+id/seconds_text"/>
+                android:id="@+id/seconds_text"
+                android:maxLength="2"/>
 
         </LinearLayout>
 
