--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -109,4 +109,9 @@
 
     <color name="primary_new_two_lightest">#ebeff5</color>
 
+    <color name="calc_grey_100">#f5f5f5</color>
+    <color name="calc_grey_200">#eeeeee</color>
+    <color name="calc_grey_300">#e0e0e0</color>
+    <color name="calc_grey_500">#9e9e9e</color>
+
 </resources>
