--- a/app/src/main/res/layout/row_reminder.xml
+++ b/app/src/main/res/layout/row_reminder.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="10sp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="10sp"
+    app:cardElevation="5sp">
 
     <LinearLayout
         android:layout_width="match_parent"
