--- a/app/src/main/res/layout/fragment_screen_test.xml
+++ b/app/src/main/res/layout/fragment_screen_test.xml
@@ -6,9 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.test_activity.tests.screen_test_fragment.ScreenTestFragment">
 
-    <com.agsw.FabricView.FabricView
+    <com.rm.freedrawview.FreeDrawView
+        android:id="@+id/free_draw"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fabric_view"/>
+        android:background="@color/white"
+        app:paintAlpha="255"
+        app:paintColor="@color/colorBlackShade"
+        app:paintWidth="4dp"
+        app:resizeBehaviour="crop"/>
 
 </FrameLayout>
